--- a/src/main/resources/static/product.html
+++ b/src/main/resources/static/product.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.11/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+    <script defer src="https://momentjs.com/downloads/moment.js"></script>
 </head>
 <body>
 
@@ -31,42 +31,76 @@
                     <a class="nav-link" href="/products">Products</a>
                 </li>
             </ul>
+            <button v-on:click="truncate" type="button" class="nav-link btn btn-danger">Delete all data</button>
         </div>
     </nav>
 
     <div class="container">
-        <div class="row">
-                <table class="table table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">Type</th>
-                        <th scope="col">Brand</th>
-                        <th scope="col">Model</th>
-                        <th scope="col">Code</th>
-                    </tr>
-                    </thead>
-                    <tbody>
+        <div id="products-table" class="row">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">Type</th>
+                    <th scope="col">Brand</th>
+                    <th scope="col">Model</th>
+                    <th scope="col">Code</th>
+                </tr>
+                </thead>
+                <tbody>
 
-                    <tr v-on:click="showReviews(product.code)" v-for="product in products" class="table-active">
-                        <td>{{product.type}}</td>
-                        <td>{{product.brand}}</td>
-                        <td>{{product.model}}</td>
-                        <td>{{product.code}}</td>
-                    </tr>
-                    </tbody>
-                </table>
+                <tr v-on:click="showReviews(product.code)" v-for="product in products" class="table-active">
+                    <td>{{product.type}}</td>
+                    <td>{{product.brand}}</td>
+                    <td>{{product.model}}</td>
+                    <td>{{product.code}}</td>
+                    <td>
+                        <a v-bind:href="'/export/reviews?productCode=' + product.code">
+                            <i class="fas fa-download"></i>
+                        </a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
-        <div class="row" >
-            <div v-for="review in reviews" class="row">
-                <div class="col-3">
-                    <h6>
-                        {{review.author}}
-                    </h6>
-                </div>
-                <div class="col-9">
-                    <p>
-                        {{review.comment}}
-                    </p>
+        <div class="row">
+            <div id="reviews">
+                <div v-for="review in reviews" v-bind:class="review.recommended | recommended">
+                    <div class="row card-header">
+                        <a v-bind:href="'/export/reviews/' + review.id">
+                            <i class="fas fa-download"></i>
+                        </a>
+                        <span class="author">Author: <b>{{review.author}}</b></span>
+                    </div>
+                    <div class="row card-body">
+                        <div class="row">
+                            <i class="fas fa-star"> </i>
+                            <span class="stars-count"> {{review.starsCount}}</span>
+                        </div>
+                        <div class="row">
+                            <span class="text-success">Benefits:</span> {{review.benefits | array}}
+                        </div>
+                        <div class="row">
+                            <span class="text-danger">Defects:</span> {{review.defects | array}}
+                        </div>
+                        <br/>
+                        <div class="row comment-body">
+                            <p>
+                                {{review.comment}}
+                            </p>
+                        </div>
+                        <div class="row">
+                            <div class="date">
+                                {{review.publishedDate | date}}
+                            </div>
+                            <div class="left-element">
+                                <i class="fas fa-thumbs-up"></i>
+                                <span class="likes-count">{{review.likesCount}}</span>
+                                <i class="fas fa-thumbs-down likes-count"></i>
+                                <span class="likes-count">{{review.dislikesCount}}</span>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -75,29 +109,8 @@
 
 </div>
 
-<script>
-    const vm = new Vue({
-        el: '#app',
-        data: {
-            products: [],
-            reviews: []
-        },
-        methods: {
-            showReviews: function (code) {
-                axios.get("/reviews?productCode=" + code + "&page=0&size=10")
-                    .then(response => {
-                        this.reviews = response.data.payload;
-                    })
-            }
-        },
-        created() {
-            axios.get("/products?page=0&size=10")
-                .then(response => {
-                    this.products = response.data.payload;
-                });
-        }
-    });
-</script>
+<script type="text/javascript" src="js/global.js"></script>
+<script type="text/javascript" src="js/product.js"></script>
 
 </body>
 </html>
