Created nav bar component

--- a/src/main/resources/static/product.html
+++ b/src/main/resources/static/product.html
@@ -15,26 +15,7 @@
 <body>
 
 <div id="app" class="countainer-fluid">
-    <nav class="navbar navbar-expand-lg navbar-default">
-        <a class="navbar-brand" href="#">Turbo parse</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Parse</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/products">Products</a>
-                </li>
-            </ul>
-            <button v-on:click="truncate" type="button" class="nav-link btn btn-danger">Delete all data</button>
-        </div>
-    </nav>
-
+    <top-navbar></top-navbar>
     <div class="container">
         <div id="products-table" class="row">
             <table class="table table-hover">
@@ -109,6 +90,7 @@
 
 </div>
 
+<script type="text/javascript" src="js/components/nav.js"></script>
 <script type="text/javascript" src="js/global.js"></script>
 <script type="text/javascript" src="js/product.js"></script>
 
